docs: 详细的环境搭建教程